@@ -17,6 +17,9 @@ Zope Changes
      - The ZEO unit tests and wo_pcgi.py didn't run on Windows if the path 
        to the python executable included a space.
 
+     - Some calls to os.system('chmod') has been replaced with the more 
+       portable os.chmod() call, to make install work properly on Windows.
+
 
   Zope 2.6.1 beta 2
 
